--- a/package.json
+++ b/package.json
@@ -15,9 +15,14 @@
     "publish": true
   },
   "dependencies": {
+    "@react-three/drei": "^10.0.8",
+    "@react-three/fiber": "^9.1.2",
+    "@react-three/postprocessing": "^3.0.4",
+    "@react-three/rapier": "^2.1.0",
     "hono": "4.7.7",
     "react": "19.0.0",
-    "react-dom": "19.0.0"
+    "react-dom": "19.0.0",
+    "three": "^0.176.0"
   },
   "devDependencies": {
     "@cloudflare/vite-plugin": "1.0.8",
@@ -32,7 +37,7 @@
     "globals": "15.15.0",
     "typescript": "5.8.3",
     "typescript-eslint": "8.31.0",
-    "vite": "6.3.2",
+    "vite": "^6.3.5",
     "wrangler": "4.12.0"
   },
   "scripts": {
